Added more permissions